--- a/css/style.css
+++ b/css/style.css
@@ -1,139 +1,174 @@
 html,
 body {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    font-family: sans-serif;
-    font-size: small;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+  font-size: small;
+}
+
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(19, 19, 19, 0.76);
+  z-index: 2;
+  cursor: pointer;
+}
+
+#text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 50px;
+  color: white;
+  transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+}
+
+#subtext{
+  position: absolute;
+  margin-top: 50px;
+  top: 50%;
+  left: 50%;
+  font-size: 25px;
+  color: white;
+  transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
 }
 
 #map {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .layer-switcher.shown.ol-control {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .layer-switcher.shown.ol-control:hover {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .layer-switcher {
-    position: absolute;
-    top: 3.5em;
-    right: 0.5em;
-    text-align: left;
+  position: absolute;
+  top: 3.5em;
+  right: 0.5em;
+  text-align: left;
 }
 
 .layer-switcher.shown {
-    bottom: 3em;
+  bottom: 3em;
 }
 
 .layer-switcher .panel {
-    padding: 0 1em 0 0;
-    margin: 0;
-    border: 4px solid #eee;
-    border-radius: 4px;
-    background-color: white;
-    display: none;
-    max-height: 100%;
-    overflow-y: auto;
+  padding: 0 1em 0 0;
+  margin: 0;
+  border: 4px solid #eee;
+  border-radius: 4px;
+  background-color: white;
+  display: none;
+  max-height: 100%;
+  overflow-y: auto;
 }
 
 .layer-switcher.shown .panel {
-    display: block;
+  display: block;
 }
 
 .layer-switcher button {
-    float: right;
-    width: 35px;
-    height: 35px;
-    background-image: url('../img/layer.png');
-    background-repeat: no-repeat;
-    background-position: 2px;
-    background-color: white;
-    border: none;
+  float: right;
+  width: 35px;
+  height: 35px;
+  background-image: url('../img/layer.png');
+  background-repeat: no-repeat;
+  background-position: 2px;
+  background-color: white;
+  border: none;
 }
 
 .layer-switcher.shown button {
-    display: none;
+  display: none;
 }
 
 .layer-switcher button:focus,
 .layer-switcher button:hover {
-    background-color: white;
+  background-color: white;
 }
 
 .layer-switcher ul {
-    padding-left: 1em;
-    list-style: none;
+  padding-left: 1em;
+  list-style: none;
 }
 
 .layer-switcher li.group {
-    padding-top: 5px;
+  padding-top: 5px;
 }
 
 .layer-switcher li.group>label {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .layer-switcher li.layer {
-    display: table;
+  display: table;
 }
 
 .layer-switcher li.layer label,
 .layer-switcher li.layer input {
-    display: table-cell;
-    vertical-align: sub;
+  display: table-cell;
+  vertical-align: sub;
 }
 
 .layer-switcher label.disabled {
-    opacity: 0.4;
+  opacity: 0.4;
 }
 
 .layer-switcher input {
-    margin: 4px;
+  margin: 4px;
 }
 
 .layer-switcher.touch ::-webkit-scrollbar {
-    width: 4px;
+  width: 4px;
 }
 
 .layer-switcher.touch ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 
 .layer-switcher.touch ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
 .layer-switcher .group.layer-switcher-fold>label:before {
-    content: '';
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 2px;
-    margin-right: 2px;
-    margin-bottom: 2px;
+  content: '';
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 2px;
+  margin-right: 2px;
+  margin-bottom: 2px;
 }
 
 .layer-switcher .group.layer-switcher-fold.layer-switcher-close>label:before {
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
 }
 
 .layer-switcher .group.layer-switcher-fold.layer-switcher-open>label:before {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
 }
 
 .layer-switcher .group.layer-switcher-fold.layer-switcher-close>ul {
-    overflow: hidden;
-    height: 0;
+  overflow: hidden;
+  height: 0;
 }
