--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 
 #text{
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   font-size: 50px;
   color: white;
@@ -33,7 +33,8 @@ body {
 
 #subtext{
   position: absolute;
-  margin-top: 50px;
+  margin-top: 70px;
+  margin-bottom: 20px;
   top: 50%;
   left: 50%;
   font-size: 25px;
