--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,26 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   border: solid gray 1px;
   padding: 5px;
-  font-size: smaller;
+  font-size: 15px;
   z-index: 1000000000;
 }
 
 #info table p {
   font-size: 15px;
   font-family: Roboto;
+}
+
+#tracking {
+  display: none;
+  position: absolute;
+  bottom: 20px;
+  left: 60px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: solid gray 1px;
+  padding: 5px;
+  font-size: 15px;
+  font-family: Roboto;
+  z-index: 1000000000;
 }
 
 #overlay {
