--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ body {
   height: 20px;
 }
 
+.ol-control button {
+  font-size: 18px;
+  background-color: #4CAF50;
+}
+
 #info {
   display: none;
   position: absolute;
@@ -36,7 +41,7 @@ body {
   text-overflow: ellipsis;
   width: 400px;
   position: absolute;
-  top: 10px;
+  bottom: 10px;
   left: 40%;
   z-index: 9999;
 }
