--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,15 @@ body {
   font-size: small;
 }
 
+textarea,
+select,
+input,
+button {
+  outline: none;
+}
+
 #adress {
-  width: 400px;
+  width: 600px;
   height: 20px;
 }
 
@@ -42,7 +49,7 @@ body {
   width: 400px;
   position: absolute;
   bottom: 10px;
-  left: 40%;
+  left: 35%;
   z-index: 9999;
 }
 
@@ -57,14 +64,14 @@ input[type=text] {
   background-color: #4CAF50;
   /* Green */
   border: none;
-  width: 430px;
+  width: 630px;
   color: white;
   padding: 10px 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin-top: 4px;
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   cursor: pointer;
