--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   font-family: sans-serif;
   font-size: small;
+  overflow: hidden;
 }
 
 textarea,
@@ -107,7 +108,7 @@ input[type=text] {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(19, 19, 19, 0.76);
+  background-color: rgb(60, 60, 60);
   z-index: 2;
   cursor: pointer;
 }
